--- a/index.html
+++ b/index.html
@@ -4,88 +4,110 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+          rel="stylesheet"
+      />
+    <link rel="stylesheet" href="css/styles.css">
     <title> ВебСтудия</title>
-</head>
+    </head >
 <body>
              <!--Верхняя линия-->
-    <header>
+    <header class="page-header">
              <!--Навигация-->
-          <nav>
-              <a href="./index.html">WebStudio</a>
-         <ul>
-             <li><a href="#">Студия</a></li>
-             <li><a href="#">Портфолио</a></li>
-             <li><a href="#">Контакты</a></li>
-         </ul>
-           </nav>
-         <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-         </ul>
+         <nav>
+             <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
+               <ul class="site-nav list ">
+                <li><a href="" class="link current">Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
+           </ul>
+         </nav>
+           <ul class="nav-item list">
+               <li>
+                 <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+               <li>
+              <a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+           </ul>
     </header>
             <!--Уникальный контент-->
      <main>
              <!--Шапка-->
-        <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
-                <button type="button">Заказать услугу</button>
+        <section class="hero bgr-hero">
+            <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+                <button type="button " class="button primary" class="text">Заказать услугу</button>
         </section>
              <!--Особенности-->
-        <section>
-          <h2>Особенности</h2>
-            <ul>
-                <li><h3>Внимание к деталям</h3>
-                   <p>Идейные соображения, а также начало повседневной работы по
-                      формированию позиции.</p></li>
-                <li><h3>Пунктуальность</h3>
-                   <p>Задача организации, в особенности же рамки и место обучения 
-                     кадров влечет за собой.</p></li>
-                 <li> <h3>Планирование</h3>
-                   <p>Равным образом консультация с широким активом в значительной
-                      степени обуславливает.</p></li>
-                <li> <h3>Современные технологии</h3>
-                   <p>Значимость этих проблем настолько очевидна, что реализация 
-                     плановых заданий.</p></li>
+        <section class="section box">
+          <h2 class="section-title ">Особенности</h2>
+            <ul class="feature-list list ">
+                <li>
+                  <h3 class="title">Внимание к деталям</h3>
+                   <p class="text">Идейные соображения, а также начало повседневной работы по
+                      формированию позиции.</p>
+                    </li>
+                <li>
+                  <h3 class="title">Пунктуальность</h3>
+                   <p class="text">Задача организации, в особенности же рамки и место обучения 
+                     кадров влечет за собой.</p>
+                    </li>
+                 <li>
+                   <h3 class="title">Планирование</h3>
+                   <p class="text">Равным образом консультация с широким активом в значительной
+                      степени обуславливает.</p>
+                    </li>
+                <li>
+                  <h3 class="title">Современные технологии</h3>
+                   <p class="text">Значимость этих проблем настолько очевидна, что реализация 
+                     плановых заданий.</p>
+                    </li>
             </ul>
         </section>
              <!--Чем мы занимаемся-->
-        <section>
-            <h2>Чем мы занимаемся</h2>
-        <ul>
-           <li><img src="images/i11.jpg" alt="Верстка"
+        <section class="section box">
+            <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="feature-list list">
+           <li>
+             <img src="images/i11.jpg" alt="Верстка"
                     width="370" 
                     height="294" /></li>
-           <li><img src="images/i21.jpg" alt="Дизайн" 
+           <li>
+             <img src="images/i21.jpg" alt="Дизайн" 
                     width="370" 
                     height="294"/></li>
-           <li><img src="images/i31.jpg" alt="Оформление" 
+           <li>
+             <img src="images/i31.jpg" alt="Оформление" 
                     width="370"
                     height="294"/></li>
         </ul>
         </section>
              <!--Наша команда-->
-        <section>
-           <h2>Наша команда</h2>
-             <ul>
-                 <li><img src="images/img21.jpg" alt="Игорь Демьяненко" 
+        <section class="section bgr-feature">
+           <h2 class="section-title">Наша команда</h2>
+             <ul class="feature-list list">
+                 <li>
+                   <img src="images/img21.jpg" alt="Игорь Демьяненко" 
                           width="270"
                           height="260" />
-                     <h3>Игорь Демьяненко</h3>
+                     <h3 class="title">Игорь Демьяненко</h3>
                            <p>Product Designer</p></li>
-                 <li><img src="images/img22.jpg" alt="Ольга Репина" 
+                 <li>
+                   <img src="images/img22.jpg" alt="Ольга Репина" 
                           width="270" 
                           height="260" />
-                     <h3>Ольга Репина</h3>
+                     <h3 class="title">Ольга Репина</h3>
                             <p>Frontend Developer</p></li>
-                 <li><img src="images/img23.jpg" alt="Николай Тарасов" 
+                 <li>
+                   <img src="images/img23.jpg" alt="Николай Тарасов" 
                           width="270"
                           height="260" />
-                       <h3>Николай Тарасов</h3>
+                       <h3 class="title">Николай Тарасов</h3>
                             <p>Marketing</p></li>
-                 <li><img src="images/img24.jpg" alt="Михаил Ермаков"
+                 <li>
+                   <img src="images/img24.jpg" alt="Михаил Ермаков"
                           width="270" 
                           height="260" />
-                       <h3>Михаил Ермаков</h3>
+                       <h3 class="title">Михаил Ермаков</h3>
                             <p>UI Designer</p></li>
             </ul>
         </section>
@@ -93,15 +115,20 @@
                  <!--Подвал-->
      <footer>
                  <!--Address-->
-        <a href="./index.html">WebStudio</a>
-          <address >
-            <ul>
-              <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
-                г. Киев, пр-т Леси Украинки, 26</a> </li>
-              <li><a class="link" href="mailto:info@devstudio.com">info@example.com</a> </li>
-              <li><a href="tel:+380961111111">+38 096 111 11 11</a> </li>
+         <div class="bgr-footer">
+               <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
+          <address > 
+            <ul class="nav-item list list">
+              <li>
+                <a  class="link-white" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
+                г. Киев, пр-т Леси Украинки, 26</a></li>
+              <li>
+                <a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
+              <li>
+                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
           </address>
+        </div>
      </footer>
 </body>
 </html>
