--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head >
 <body>
              <!--Верхняя линия-->
-    <header class="page-header">
+    <header> 
              <!--Навигация-->
          <nav>
              <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
@@ -33,9 +33,9 @@
             <!--Уникальный контент-->
      <main>
              <!--Шапка-->
-        <section class="hero bgr-hero">
+        <section class="hero text bgr-hero">
             <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                <button type="button " class="button primary" class="text">Заказать услугу</button>
+                <button type="button" class="button primary">Заказать услугу</button>
         </section>
              <!--Особенности-->
         <section class="section box">
