--- a/portfolio.html
+++ b/portfolio.html
@@ -13,9 +13,9 @@
     <title>Портфолио</title>
     </head>
 <body>
-    <header class="page-header">
+    <header >
         <!--Навигация-->
-        <nav>
+               <nav>
             <a href="./index.html" class="logo">Web<span class="logo-black">Studio</span></a>
               <ul class="site-nav list ">
                 <li><a href="./index.html" class="link">Студия</a></li>
@@ -31,13 +31,13 @@
                 <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
         </ul>
-    </header>
+      </header>
     <main>
         <!--Наши роботы-->
             <section class="hero box">
             <h1 class="hero-title">Портфолио</h1>
         <!--Фильтр-->
-        <ul class="list" class="link" >
+        <ul class="list link ">
             <li>
                 <button type="button"  class=" button-item"  >Все</button>
             </li>
@@ -140,7 +140,7 @@
                 <img src="images/project9.jpg" alt="Growing Business"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle" class="text-list">Growing Business</h2>
+                  <h2 class="subtitle text-list">Growing Business</h2>
                         <p class="text-list">Приложение</p>
                         <p></p>
                 </a>
