--- a/portfolio.html
+++ b/portfolio.html
@@ -55,9 +55,9 @@
                 <button type="button"  class=" button-item" >Маркетинг</button>
             </li> 
         </ul>
-        <ul class="list">
+        <ul class="list ">
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project1.jpg" alt="Технокряк"
                      width="370"
                      height="294"/>
@@ -67,7 +67,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star"
                      width="370"
                      height="294"/>
@@ -77,7 +77,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project3.jpg" alt="Ресторан Seafood"
                      width="370"
                      height="294"/>
@@ -87,7 +87,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project4.jpg" alt="Проект Prime"
                      width="370"
                      height="294"/>
@@ -97,7 +97,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project5.jpg" alt="Проект Boxes"
                      width="370"
                      height="294">
@@ -107,7 +107,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project6.jpg" alt="Inspiration has no Borders"
                      width="370"
                      height="294">
@@ -117,7 +117,7 @@
                 </a>
             </li>
             <li>
-                 <a href="#">
+                 <a href="#" class="projects">
                 <img src="images/project7.jpg" alt="Издание Limited Edition"
                      width="370"
                      height="294">
@@ -126,7 +126,7 @@
                         <p></p>
                 </a>
             </li>
-            <li><a href="#">
+            <li><a href="#" class="projects">
                 <img src="images/project8.jpg" alt="Проект LAB"
                      width="370"
                      height="294">
@@ -136,11 +136,11 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="#" class="projects">
                 <img src="images/project9.jpg" alt="Growing Business"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle text-list">Growing Business</h2>
+                  <h2 class="subtitle ">Growing Business</h2>
                         <p class="text-list">Приложение</p>
                         <p></p>
                 </a>
