--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
      <main>
              <!--Шапка-->
         <section class="hero text bgr-hero">
-            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса </br></h1>
+            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса  </h1>
                 <button type="button" class="button primary">Заказать услугу</button>
         </section>
              <!--Особенности-->
@@ -43,23 +43,23 @@
             <ul class="feature-list list ">
                 <li>
                   <h3 class="title">Внимание к деталям</h3>
-                   <p class="text">Идейные соображения, а также <br>начало повседневной работы по</br>
+                   <p class="text">Идейные соображения, а также <br>начало повседневной работы по <br>
                       формированию позиции.</p>
                     </li>
                 <li>
                   <h3 class="title">Пунктуальность</h3>
                    <p class="text">Задача организации, в особенности <br> же рамки и место обучения 
-                     кадров</br> влечет за собой.</p>
+                     кадров <br> влечет за собой.</p>
                     </li>
                  <li>
                    <h3 class="title">Планирование</h3>
-                   <p class="text">Равным образом консультация с <br>широким активом в значительной</br>
+                   <p class="text">Равным образом консультация с <br> широким активом в значительной <br>
                       степени обуславливает.</p>
                     </li>
                 <li>
                   <h3 class="title">Современные технологии</h3>
                    <p class="text">Значимость этих проблем настолько <br> очевидна, что реализация 
-                     плановых </br> заданий.</p>
+                     плановых <br> заданий.</p>
                     </li>
             </ul>
         </section>
