--- a/index.html
+++ b/index.html
@@ -34,37 +34,37 @@
      <main>
              <!--Шапка-->
         <section class="hero text bgr-hero">
-            <h1 class="hero-title">Эффективные решения <br> для вашего бизнеса  </h1>
+            <h1 class="hero-title">ЭФФЕКТИВНЫЕ РЕШЕНИЯ <br> ДЛЯ ВАШЕГО БИЗНЕСА  </h1>
                 <button type="button" class="button primary">Заказать услугу</button>
         </section>
              <!--Особенности-->
-        <section class="section box">
+        <section class="section  bg-section">
           <h2 class="section-title ">Особенности</h2>
             <ul class="feature-list list ">
                 <li>
-                  <h3 class="title">Внимание к деталям</h3>
+                  <h3 class="title">ВНИМАНИЕ К ДЕТАЛЯМ </h3>
                    <p class="text">Идейные соображения, а также <br>начало повседневной работы по <br>
                       формированию позиции.</p>
                     </li>
                 <li>
-                  <h3 class="title">Пунктуальность</h3>
+                  <h3 class="title">ПУНКТУАЛЬНОСТЬ</h3>
                    <p class="text">Задача организации, в особенности <br> же рамки и место обучения 
                      кадров <br> влечет за собой.</p>
                     </li>
                  <li>
-                   <h3 class="title">Планирование</h3>
+                   <h3 class="title">ПЛАНИРОВАНИЕ </h3>
                    <p class="text">Равным образом консультация с <br> широким активом в значительной <br>
                       степени обуславливает.</p>
                     </li>
                 <li>
-                  <h3 class="title">Современные технологии</h3>
+                  <h3 class="title">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ </h3>
                    <p class="text">Значимость этих проблем настолько <br> очевидна, что реализация 
                      плановых <br> заданий.</p>
                     </li>
             </ul>
         </section>
              <!--Чем мы занимаемся-->
-        <section class="section box">
+        <section class="section bg-section">
             <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="feature-list list">
            <li>
@@ -82,7 +82,7 @@
         </ul>
         </section>
              <!--Наша команда-->
-        <section class="section bgr-feature">
+        <section class="section feature">
            <h2 class="section-title">Наша команда</h2>
              <ul class="feature-list list">
                  <li>
@@ -90,45 +90,43 @@
                           width="270"
                           height="260" />
                      <h3 class="title">Игорь Демьяненко</h3>
-                           <p>Product Designer</p></li>
+                           <p class="text-list">Product Designer</p></li>
                  <li>
                    <img src="images/img22.jpg" alt="Ольга Репина" 
                           width="270" 
                           height="260" />
                      <h3 class="title">Ольга Репина</h3>
-                            <p>Frontend Developer</p></li>
+                            <p class="text-list">Frontend Developer</p></li>
                  <li>
                    <img src="images/img23.jpg" alt="Николай Тарасов" 
                           width="270"
                           height="260" />
                        <h3 class="title">Николай Тарасов</h3>
-                            <p>Marketing</p></li>
+                            <p class="text-list">Marketing</p></li>
                  <li>
                    <img src="images/img24.jpg" alt="Михаил Ермаков"
                           width="270" 
                           height="260" />
                        <h3 class="title">Михаил Ермаков</h3>
-                            <p>UI Designer</p></li>
+                            <p class="text-list">UI Designer</p></li>
             </ul>
         </section>
      </main>
                  <!--Подвал-->
-     <footer>
+     <footer class="footer-bg">
                  <!--Address-->
-         <div class="bgr-footer">
                <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
           <address > 
             <ul class="nav-item list list">
               <li>
-                <a  class="link-white" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
+                <a  class="link-white"  href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
                 г. Киев, пр-т Леси Украинки, 26</a></li>
-              <li>
-                <a class="link" href="mailto:info@devstudio.com">info@example.com</a></li>
-              <li>
-                <a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+              <li class="white-rgba">
+                <a class="link " href="mailto:info@devstudio.com">info@example.com</a></li>
+              <li class="white-rgba">
+                <a class="link " href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
           </address>
-        </div>
      </footer>
 </body>
 </html>
