--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
                 <li><a href="" class="link">Контакты</a></li>
               </ul>
         </nav>
-        <ul class="nav-item list list">
+        <ul class="nav-item  list">
             <li>
                 <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
@@ -34,7 +34,7 @@
       </header>
     <main>
         <!--Наши роботы-->
-            <section class="hero box">
+            <section class="hero bgr-portfolio">
             <h1 class="hero-title">Портфолио</h1>
         <!--Фильтр-->
         <ul class="list link ">
@@ -57,116 +57,106 @@
         </ul>
         <ul class="list ">
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project1.jpg" alt="Технокряк"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle">Технокряк</h2>
+                  <h2 class="subtitle-portfolio">Технокряк</h2>
                         <p class="text-list">Веб-сайт</p>
                         
                 </a>
             </li>
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project2.jpg" alt="Постер New Orlean vs Golden Star"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle">Постер New Orlean vs Golden Star</h2>
+                  <h2 class="subtitle-portfolio">Постер New Orlean vs Golden Star</h2>
                         <p class="text-list">Дизайн</p>
-                        <p></p>
                 </a>
             </li>
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project3.jpg" alt="Ресторан Seafood"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle">Ресторан Seafood</h2>
+                  <h2 class="subtitle-portfolio">Ресторан Seafood</h2>
                         <p class="text-list">Приложение</p>
-                        <p></p>
                 </a>
             </li>
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project4.jpg" alt="Проект Prime"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle">Проект Prime</h2>
+                  <h2 class="subtitle-portfolio">Проект Prime</h2>
                         <p class="text-list">Маркетинг</p>
-                        <p></p>
                 </a>
             </li>
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project5.jpg" alt="Проект Boxes"
                      width="370"
                      height="294">
-                   <h2 class="subtitle">Проект Boxes</h2>
+                   <h2 class="subtitle-portfolio">Проект Boxes</h2>
                         <p class="text-list">Приложение</p>
-                        <p></p>
                 </a>
             </li>
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project6.jpg" alt="Inspiration has no Borders"
                      width="370"
                      height="294">
-                  <h2 class="subtitle">Inspiration has no Borders</h2>
+                  <h2 class="subtitle-portfolio">Inspiration has no Borders</h2>
                         <p class="text-list">Веб-сайт</p>
-                        <p></p>
                 </a>
             </li>
             <li>
-                 <a href="#" class="projects">
+                 <a href="#" class="our-projects">
                 <img src="images/project7.jpg" alt="Издание Limited Edition"
                      width="370"
                      height="294">
-                  <h2 class="subtitle">Издание Limited Edition</h2>
+                  <h2 class="subtitle-portfolio">Издание Limited Edition</h2>
                         <p class="text-list">Дизайн</p>
-                        <p></p>
                 </a>
             </li>
-            <li><a href="#" class="projects">
+            <li><a href="#" class="our-projects">
                 <img src="images/project8.jpg" alt="Проект LAB"
                      width="370"
                      height="294">
-                  <h2 class="subtitle">Проект LAB</h2>
+                  <h2 class="subtitle-portfolio">Проект LAB</h2>
                         <p class="text-list">Маркетинг</p>
-                        <p></p>
                 </a>
             </li>
             <li>
-                <a href="#" class="projects">
+                <a href="#" class="our-projects">
                 <img src="images/project9.jpg" alt="Growing Business"
                      width="370"
                      height="294"/>
-                  <h2 class="subtitle ">Growing Business</h2>
+                  <h2 class="subtitle-portfolio">Growing Business</h2>
                         <p class="text-list">Приложение</p>
-                        <p></p>
                 </a>
             </li>
         </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer-bg">
         <!--Address-->
-    <div class="bgr-footer">
         <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
         <address>
             <ul class="nav-item list ">
                 <li>
-                    <a  class="link-white" href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
+                    <a class="link-white"   href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li>
+                <li class="white-rgba">
                     <a class="link" href="mailto:info@devstudio.com">info@example.com</a>
                 </li>
-                <li>
+                <li class="white-rgba">
                     <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
-    </div>
     </footer>
 </body>
 </html>
