--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
             <section class="hero bgr-portfolio">
             <h1 class="hero-title">Портфолио</h1>
         <!--Фильтр-->
-        <ul class="list link ">
+        <ul class="list link  button-center">
             <li>
                 <button type="button"  class=" button-item"  >Все</button>
             </li>
