--- a/portfolio.html
+++ b/portfolio.html
@@ -144,16 +144,16 @@
         <!--Address-->
         <a href="./index.html" class="logo">Web<span class="logo-white">Studio</span></a>
         <address>
-            <ul class="nav-item list ">
+            <ul class="footer-item list ">
                 <li>
                     <a class="link-white"   href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">
                         г. Киев, пр-т Леси Украинки, 26</a>
                 </li>
-                <li class="white-rgba">
+                <li >
                     <a class="link" href="mailto:info@devstudio.com">info@example.com</a>
                 </li>
-                <li class="white-rgba">
-                    <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+                <li >
+                    <a class="link " href="tel:+380961111111">+38 096 111 11 11</a>
                 </li>
             </ul>
         </address>
